--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,12 @@
   border: 3px solid purple;
   margin: 5px
 }
+
+.concert-program{
+  border: 3px solid purple;
+  margin: 5px
+
+}
+.performance{
+  border: .5px solid green;
+}
